--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # My Original Set
 #=============================================
 data/
+twitter.json
 
 #=============================================
 # node.js & Grunt
@@ -21,4 +22,3 @@ node_modules/
 *.stTheme.cache
 
 sftp-config.json
-
