--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.10.2",
-    "socket.io": "^1.3.4"
+    "socket.io": "^1.3.4",
+    "twitter": "^1.2.1",
+    "util": "^0.10.3"
   }
 }
