--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ node_modules/
 .tmp/
 
 #=============================================
+# Bower
+#=============================================
+bower_components/
+
+#=============================================
 # Sublime Text
 #=============================================
 *.sublime-workspace
